corrected spacing and alignment of elements

--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -4,6 +4,21 @@
 *:before,
 *:after {
   box-sizing: border-box;
+  outline: none;
+}
+
+p {
+  line-height: 1.5rem;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.6);
+  font-size: 16px;
+  font-family: 'OpenSans', 'sans-serif';
+  text-decoration: none;
+}
+
+img {
+  height: auto;
+    max-width: 100%;
 }
 
 a.entire-link {
@@ -11,11 +26,22 @@ display: block;
 text-decoration: none;
 width: 100%;
 height: 300px;
-
 }
+
 .logo {
   height: 50%;
   max-width: 50%;
+  transition: all .5s ease-out .5s;
+}
+
+header.site-header {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  padding: 2rem;
 }
 
 // Screen Reader styled to hide the h1 text. 
@@ -30,35 +56,48 @@ body {
   color: #fff;
   font-size: 16px;
   font-family: 'OpenSans', 'sans-serif';
-  line-height: 1;
   height: 100vh;
+  display: block;
 }
 
-.header {
+// div.container in the demo
+section.container {
     display: flex;
     flex-direction: column;
-    // flex-wrap: wrap;
-    z-index: 1;
-    height: 85%;
+    flex-wrap: wrap;
+    
+    // justify-content: space-between;
+    margin: 0 auto;
+    justify-content: space-between;
+    // align-items: center;
+    max-width: 1600px;
     width: 100%;
-    justify-content: center;
-    align-items: center;
 
-} @media screen and (min-width: 600px) {
-  flex-direction: row;
-  padding-left: 40px;
+} 
+
+.search-form-inner {
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  margin-bottom: 1rem;
+  width: 100%;
 }
-@media screen and (min-width: 1000px) {
-  justify-content: flex-start;
-  padding-left: 0px;
-   }
+
+.logo, .search-form {
+  display: block;
+  width: 300px;
+}
 
 img.ajax-loader {
-  width: 50px;
-  height: 50px;
+  display: none;
+  width: 38px;
+  height: 38px;
   // position: absolute;
   align-content: center;
   align-items: center;
+  // transform: translate(-50%,-50%);
+  top: 50%;
+  left: 50%;
 }
 
 logo {
@@ -66,80 +105,41 @@ logo {
  width: 150px;
 }
 
-.search-form {
+form.search-form {
   display: flex;
   justify-content: center;
   // display: block;
   width: 300px;
-  background-color:rgb(248,248,248);
-
-}
-
-p {
-  line-height: 20px;
-  color: #fff;
-  background-color: rgba(0, 0, 0, 0.6);
-  text-decoration: none;
-}
-
-div.copyright {
-  color: #c2c2c2;
-  margin-bottom: 3rem;
-  text-align: center;
-  padding: 0 2rem;
+  // background-color:rgb(248,248,248);
 }
 
 .section-articles {
     display: flex;
     flex-flow: row wrap;
 }
-.top-stories {
+.top-stories select{
     display: flex;
     flex-wrap: wrap;
     width: auto;
+    font-size: 1.1rem;
 }
 
-.text-section {
-  display: flex;
-  align-items: flex-end;
-}
-
-.search-form {
-  display: block;
-  width: 300px;
-}
+// .text-section {
+//   display: flex;
+//   align-items: flex-end;
+// }
 
 div.copyright p {
   color:#c2c2c2;
-  margin-top: 200px;
+  margin-top: 50px;
+  text-align: center;  
+  margin-bottom: 3rem;
+
+
 }
 
-// Background Image + Text
-a.entire-link {
-  display: block;
-  width: 100%;
-  height: 300px;
-  max-width: 600px;
-  position: relative;
-  // background-image: url('imageUrl');
-  background-size:cover; 
-  background-position:center;
-}
+@media screen and (min-width: 600px) {
 
-.text-section {
-  display: flex;
-  align-items: flex-end;
-  position: absolute;
-  bottom: 0;
-}
-
-// @media only screen and (min-device-width: 480px) and (min-width: 480px) {
-//     .entire-link {
-//       width: 50%;
-//       max-width: 240px;
-//       height: 60vh;
-
-@media only screen and (min-device-width: 600px) and (min-width: 600px) {
   a.entire-link {
     width: 50%;
     height: 60vh;
@@ -151,10 +151,34 @@ width: 50%;
 
 }
 
-.logo {
-  width: 67px;
-  height: 67px;
+  header.site-header {
+    align-items: center;
+    width: 100%;
 }
+
+  .logo, .search-form {
+    max-width: 250px;
+}
+
+  div.logo {
+    flex: 0 1 25%;
+    margin: 0 1rem 0 0;
+    text-align: left;
+}
+
+form.search-form {
+  // -ms-flex: 0 1 75%;
+  flex: 0 1 75%;
+}
+
+.logo, .search-form {
+  max-width: 250px;
+}
+
+.search-form-inner {
+  text-align: left;
+}
+
 }
 
 @media only screen and (min-device-width: 1000px) and (min-width: 1000px) {
